2024-06-25  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.7-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.7-alpha02: Stroker';git push
	git tag -a 5.2.7-alpha02 -m 'all: qnt lossy_compresion->quantization, dpr family';git push --tags

	* Fix regrssion test that failed due to quantization being crd-like variable

	* Deprecate "family" attribute from quantization container variable

	* Migrate from container variable name from "lossy_compression" to "quantization"

	* NCO 5.2.7-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.7-alpha01: Nordheimer';git push
	git tag -a 5.2.7-alpha01 -m 'Functionally identical to 5.2.6';git push --tags

2024-06-20  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.6 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.6: Solstice';git push
	git tag -a 5.2.6 -m 'Functionally identical to 5.2.5 with one-line ncremap bugfix';git push --tags

	* ncremap fix syntax error and bug introduced in 5.2.5 sgs_frc checking code

2024-06-19  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.5 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.5: Freight Train';git push
	git tag -a 5.2.5 -m 'all: qnt_alg nm cf cv, btr mre; ncclimo: xcl_var tms md, mpas fl_nm v3; ncremap: mpasa, vrt level(level)';git push --tags

	* NCO 5.2.5-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.5-alpha04: D+D';git push
	git tag -a 5.2.5-alpha04 -m 'ncclimo: mpas fl_nm v3, rgn_avg wrn; ncremap: vrt level(level)';git push --tags

	* nco.texi Document MPAS filename construction

	* ncclimo WARN why rgn_avg expected to fail on MPAS input datasets

	* ncclimo update MPAS filename construction rule by prepending ${caseid}

	* ncremap nco_vrt_ntp() if plev not found, try level(level) instead (for ERA5)

2024-06-18  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.5-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.5-alpha03: Red Tide';git push